# cpp_examples

./: .gitignore  CMakeLists.txt  README.md  arg_forwarding.cpp  binaryIO.cpp  cpp_macro.cpp  dynamic_allocated_array.cpp  hash.cpp  logger.cpp  main_with_env.cpp  nanoodbc_test.cpp  regex_search.cpp  rm_executables.sh  singleton.cpp  span.cpp  sqlite3_simple.cpp  static_variable.cpp  string_view.cpp  struct_alignment.cpp  virtual_operator.cpp
basic_syntax/: agregate_initialzation.cpp  c_array_and_pointer.cpp  initializer_list_constructor.cpp
boost_socket/: CMakeLists.txt
code_to_study/: fast_regex.cpp
db_abstraction/: CMakeLists.txt  db_dynamic.cpp  db_static.cpp  db_static_interface.h  db_static_sqlite.cpp  static_sqlite_main.cpp
sml/: gui_sm.cpp  sml_example.cpp
sml/boost/: sml.hpp
template_practice/: CMakeLists.txt  implicit_initialization.cpp  integer.cpp  integer.h  integer_main.cpp  template_explicit_instantiate.md  template_with_const_char_arg.cpp
